add render task list

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
+
 <body>
-    Witam serdecznie
+    <header class="header">
+        <h1 class="header__title">TO DO list</h1>
+    </header>
+    <form class="js-form">
+        <input class="js-newTask">
+        <button>Dodaj zadanie</button>
+    </form>
+    <ul class="taskList"></ul>
+    <footer>
+        <p>Wszelkie prawa zastrzeżone &copy Jacek Olszowski 2020</p>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
+
 </html>
